[project]
name = "odoo-addons-oca-account-invoicing"
version = "17.0.20240502.0"
dependencies = [
    "odoo-addon-account_invoice_crm_tag>=17.0dev,<17.1dev",
    "odoo-addon-account_invoice_fixed_discount>=17.0dev,<17.1dev",
    "odoo-addon-account_invoice_transmit_method>=17.0dev,<17.1dev",
    "odoo-addon-account_invoice_warn_message>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
